  * LWB: Fixed a bug where frame order was not being preserved between an "Iconify all" 
    action and a "Show all" action for the nets of a specfication.
  * LWB: The editor is now closer to (but not perfectly) rebuilding the state of the net 
    frames on a load, as per how the workflow designer left the state on a save.

Version 1.5 (27/07/2007) 
  * LWB: Atomic tasks have been enhanced so that an icon can be embedded within the task
    to help in user understandability of a net. This includes a plugin mechanism allowing
    workflow designers to add their own icons.
  * LWB: Decorators on tasks have now been enhanced so that joins and splits can now have
    differing fill colours to help visually distinguish between them.  
  * LWB: Now, when selecting a single net element, a notes tab will appear in the bottom
    pane of the editor, allowing workflow designers to add design notes (which will not be
    exported to the engine specification) to the selected element.
  * LWB: You can now right-click on a flow to get a popup menu for that flow. Kness
    can be added and removed from this menu, as well as changing the line style of the
    flow.
  * LWB: Enhanced the editor so it is now possible to change the ordering of task variables,
    net variables, and task parameter queries.
  * LWB: Enhaned the editor to include a convenience dialog that allows the rapid construction
    of decompositions for atomic tasks along with matching variables and parameters by
    simply choosing a number of net variables to supply and receive data. This can only
    be done on atomic tasks with no decompositions.
  * LWB: Fixed a bug where the initial values of net local variables were being double-quoted 
    at engine export time. This is especially problematic for initial values of complex-type 
    variables. 
  * LWB: Fixed a bug where the deletion of a variable in one task would cause the deletion of 